# best-practices

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  mise.toml  pyproject.toml  script.py
