[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changeme"
version = "1"
authors = [
    {name = "Felix Hummel", email = "felix.hummel@hukudo.de"},
]
requires-python = ">=3.9"
dependencies = [
    "click",
]

[project.scripts]
changeme = "changeme.cli:main"


[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "cython",  # for pycharm debugger extensions
    "mypy",
    "pip-tools",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]


[tool.setuptools]
packages = ["changeme"]

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff]
line-length = 79
