[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changeme"
version = "0.0.1"
authors = [{ name = "Felix Hummel", email = "changeme@felixhummel.de" }]
requires-python = ">=3.11"
dependencies = ["click"]

[project.scripts]
changeme = "changeme.cli:main"

[dependency-groups]
dev = [
    # "bump2version",
    # "cython",       # for pycharm debugger extensions
    "ipython",
    "pytest",
    "pytest-cov",
    # "pytest-xdist",
    "ruff",
    "ty",
]

# [project.optional-dependencies]
# foo = []

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "basic" # basedpyright less strict
